media-service/k8s-legacy/k8s-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internet-egress
spec:
  podSelector:
    matchLabels:
      networking/allow-internet-egress: "Xtrue"

# Egress for all
#  podSelector: { }
  egress:
    - {}
  policyTypes:
    - Egress
